peridot: rootdir: Enable mgame mi_thermald mode
Out of all the modes that run the CPU at advertised speeds without
underclocking, mgame has the most conservative thermal limits.

Change-Id: I491f608a7be5c9497c70b3e49501d7abf58a980c
Signed-off-by: Jens Reidel <adrian@travitia.xyz>

--- a/rootdir/etc/init.peridot.rc
+++ b/rootdir/etc/init.peridot.rc
@@ -56,6 +56,9 @@ on boot
     chown system system /sys/class/thermal/thermal_message/board_sensor_temp_comp
     chown system system /sys/class/thermal/thermal_message/cpu_nolimit_temp
 
+    # Set thermal mode to mgame
+    write /sys/devices/virtual/thermal/thermal_message/sconfig 19
+    
     # Xiaomi touch
     chown system system /dev/xiaomi-touch
     chmod 0660 /dev/xiaomi-touch
