peridot: rootdir: Kill WALT CPU boosting
Signed-off-by: inferno0230 <mail@inferno0230.in>
Signed-off-by: Shikhar <Krtonia@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -524,6 +524,11 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/aud_dev/state
     write /sys/devices/virtual/cvp/cvp/boot 1
 
+on property:vendor.post_boot.parsed=1
+    # Kill WALT CPU input boost
+    write /proc/sys/walt/input_boost/input_boost_freq "0 0 0 0 0 0 0"
+    write /proc/sys/walt/input_boost/input_boost_ms 0
+
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
