peridot: parts: Introduce GameBar v4.0
Signed-off-by: kenway214 <kenway214@outlook.com>

peridot: parts: Gamebar: Update some default properties

peridot: parts: Add FPS meter support with selectable method for GameBar

- Introduced `GameBarFpsMeter` class to support FPS overlay using the new Android 13+ TaskFpsCallback API.
- Added fallback legacy sysfs method (`/sys/class/drm/sde-crtc-0/measured_fps`) for older devices.
- Updated GameBar to show FPS using selected method.

Signed-off-by: kenway214 <kenway214@outlook.com>

peridot: parts: Update permissions and manifest for enhanced feature support

- Bumped minSdkVersion to 33 and targetSdkVersion to 35 to support modern APIs.
- Added required permissions for game mode management, FPS counter access,
  package queries, and device config interactions.
- Updated privapp whitelist to grant necessary permissions for new features
  in Xiaomi Parts, such as Game Mode control and FPS counter access.

Signed-off-by: kenway214 <kenway214@outlook.com>
Signed-off-by: Shikhar <Krtonia@gmail.com>

--- a/rootdir/etc/init.peridot.rc
+++ b/rootdir/etc/init.peridot.rc
@@ -121,6 +121,13 @@ on boot
     chown system system /dev/stune/top-app/cgroup.procs
     chmod 0666 /dev/stune/background/cgroup.procs
     chmod 0666 /dev/stune/top-app/cgroup.procs
+	
+	# Gamebar
+	chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
+    chmod 0660 /sys/class/drm/sde-crtc-0/measured_fps
+
+    chown system system /sys/class/power_supply/battery/temp
+    chmod 0660 /sys/class/power_supply/battery/temp
 
 on charger
     chown system system /sys/class/backlight/panel0-backlight/brightness
