peridot: Migrate to common libqti-perfd-client and power-libperfmgr
Change-Id: Id9f32976a3554cb7a79f56a310dccbe4
Signed-off-by: zenin1504 <kayozzprojects@yandex.com>
Signed-off-by: Shikhar <Krtonia@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -432,6 +432,9 @@ on post-fs-data
     #Create dir for TUI
     mkdir /data/vendor/tui 0700 system drmrpc
 
+    # Enable PowerHAL hint processing
+    setprop vendor.powerhal.init 1
+
 service nqnfcinfo /system/vendor/bin/nqnfcinfo
     class late_start
     group nfc
