peridot: parts: Refactor per app GameBar
Signed-off-by: kenway214 <kenway214@outlook.com>
Signed-off-by: Shikhar <Krtonia@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -196,10 +196,6 @@
                 android:resource="@string/game_bar_summary" />
         </activity>
 
-        <!-- GameBar AppSelector -->
-        <activity android:name=".gamebar.GameBarAppSelectorActivity" />
-        <activity android:name=".gamebar.GameBarAppRemoverActivity" />
-
         <!-- GameBar Overlay Tile Service -->
         <service
             android:name=".gamebar.GameBarTileService"
@@ -232,5 +228,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
              </intent-filter>
         </receiver>
+		
+		 <activity
+            android:name=".gamebar.GameBarPerAppConfigActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SubSettingsBase" /> 
     </application>
 </manifest>
