--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -386,6 +386,10 @@ on boot
     chmod 0660 /dev/xiaomi-touch
     chown system system /sys/class/touch/touch_dev/gesture_single_tap_enabled
     chmod 0660 /sys/class/touch/touch_dev/gesture_single_tap_enabled
+    chown system system /sys/class/touch/touch_dev/gesture_double_tap_enabled
+    chmod 0660 /sys/class/touch/touch_dev/gesture_double_tap_enabled
+    chown system system /sys/class/touch/touch_dev/gesture_double_tap_state
+    chmod 0664 /sys/class/touch/touch_dev/gesture_double_tap_state
 
 on init && property:ro.boot.mode=charger
     wait_for_prop vendor.all.modules.ready 1
