--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -603,4 +603,4 @@ subsystem mem_buf_vm
 
 # Battery
 /sys/class/qcom-battery                                 input_suspend                   0660    system  system
-/sys/class/qcom-battery                                 sport_mode                      0660    system  system
+/sys/class/qcom-battery                                 fastcharge_enable               0660    system  system
