--- a/overlay/SettingsProviderOverlayPeridotPOCO/AndroidManifest.xml
+++ b/overlay/SettingsProviderOverlayPeridotPOCO/AndroidManifest.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2024 The LineageOS Project
+     SPDX-FileCopyrightText: The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.settingsproviders.peridot.poco">
-
-    <overlay
-        android:isStatic="true"
-        android:priority="851"
-        android:targetPackage="com.android.providers.settings"/>
+    <overlay android:targetPackage="com.android.providers.settings"
+                   android:isStatic="true"
+                   android:priority="851"/>
 </manifest>
