--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -72,7 +72,7 @@ on early-init
   # create symlink for vendor mount points
     symlink /vendor/firmware_mnt /firmware
     symlink /vendor/bt_firmware /bt_firmware
-    symlink /vendor/dsp /dsp
+    # symlink /vendor/dsp /dsp
 
   # Change ownership of sysfs power control node
     chown system graphics /sys/devices/platform/soc/ae00000.qcom,mdss_mdp/power/control
