peridot: rootdir: Disable cnss cold boot calibration
Change-Id: I783146a48eb133f7efd00a35fd8cfe81fb46301a

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -106,7 +106,7 @@ on late-fs
 on post-fs-data
     mkdir /vendor/data/tombstones 0771 system system
     # Enable WLAN cold boot calibration
-    write /sys/kernel/cnss/fs_ready 1
+    # write /sys/kernel/cnss/fs_ready 1
 
 on early-boot
     verity_update_state
