--- a/rootdir/etc/init.qcom.factory.rc
+++ b/rootdir/etc/init.qcom.factory.rc
@@ -130,10 +130,6 @@ on property:persist.vendor.usb.config=* && property:ro.bootmode=qmmi && property
 on property:persist.vendor.usb.config=* && property:ro.bootmode=qmmi && property:ro.build.type=eng
     setprop sys.usb.config ${persist.vendor.usb.config}
 
-on boot && property:ro.boot.factorybuild=1
-    write /config/usb_gadget/g1/strings/0x409/serialnumber 1234567890ABCDEF
-
-
 on ffbm
     trigger early-fs
     trigger factory-fs
@@ -356,6 +352,18 @@ service vendor.audio_tc20 /vendor/bin/mm-audio-ftm -tc 20 -file /data/vendor/aud
     oneshot
 
 service vendor.audio_tc21 /vendor/bin/mm-audio-ftm -tc 21 -file /data/vendor/audio/ftm_mic6_record.wav
+    user audio
+    group audio
+    disabled
+    oneshot
+
+service vendor.audio_tc22 /vendor/bin/mm-audio-ftm -tc 22 -file /data/vendor/audio/ftm_mic7_record.wav
+    user audio
+    group audio
+    disabled
+    oneshot
+
+service vendor.audio_tc23 /vendor/bin/mm-audio-ftm -tc 23 -file /data/vendor/audio/ftm_mic8_record.wav
     user audio
     group audio
     disabled
